--- a/.github/workflows/r2s_lean.yml
+++ b/.github/workflows/r2s_lean.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: 
       - master
-    paths:
-      - '.github/workflows/r2s_lean.yml'
-  schedule:
-    - cron: '10 09 * * *'
+
+env:
+  SSH_ACTIONS: true
+  TZ: Asia/Shanghai
 
 jobs:
 
@@ -87,6 +87,10 @@ jobs:
           sed -i '/8.8.8.8/d' package/base-files/files/root/setup.sh
           mv ../../scripts/check_wan4.sh package/base-files/files/usr/bin && sed -i '/exit/i\/bin/sh /usr/bin/check_wan4.sh &' package/base-files/files/etc/rc.local
           echo -e '\nDYC Build\n'  >> package/base-files/files/etc/banner
+
+      - name: SSH connection to Actions
+        uses: P3TERX/debugger-action@master
+        if: env.SSH_ACTIONS == 'true'
 
       - name: Build FriendlyWrt
         run: |
